ci(GITHUB): update build notifications

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -47,9 +47,8 @@ jobs:
           cd incredible_project
           npm run coverage
       - name: Report Job Status
-        if: always()
+        if: ${{ failure() }}
         run: |
-          if [[ $status == "failure" ]]; then curl -X POST -H 'Content-type: application/json' --data '{"text":"ReactBoilerPlate: build has failed!"}' "${WEBHOOK_URL}"; fi
+          curl -X POST -H 'Content-type: application/json' --data '{"text":"ReactBoilerPlate: build has failed!"}' "${WEBHOOK_URL}"
         env:
-          status: ${{job.status}}
           WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
